--- a/css/index.css
+++ b/css/index.css
@@ -54,6 +54,7 @@ body {
     pointer-events: none;
     color: #aaa;
 }
+
 input {
     border: none;
     border-bottom: 1px solid #666666;
@@ -73,11 +74,13 @@ button:focus {
 }
 .form_fields {
     margin:0 auto; 
-    width: 100vw !important; 
     padding-right: 0px !important;
 }
 .form-fields li{
     padding: 10px;
+  }
+  .table>:not(:last-child)>:last-child>* {
+    border-bottom-color:#fff;
   }
 .btn-light {
     background-color: #EAEBF4 !important;
@@ -93,11 +96,11 @@ button:focus {
 .for_cbc {
     color: #D7382E;
 }
-.for_ul {
+.sidebar_ul {
     height: 100%; 
     width: 100%;
 }
-.for_ul ul li {
+.sidebar_ul ul li {
     list-style: none;
     margin: 10px;
 }
@@ -144,9 +147,9 @@ ul {
 .form-fields li{
     text-align: right;
 }
-.result td, .result th {
+/* .result td, .result th {
     border-top: 0px !important;
-}
+} */
 
 /* media queries */
 
@@ -179,10 +182,19 @@ ul {
     .for_select {
         float: none !important;
     }
+    .search-hide {
+        display: none;
+    }
+    .pt-5 {
+        padding-top: 0px !important;
+    }
 }
 
  @media (min-width: 768px) { 
     .for_open {
+        display: none;
+    }
+    .sidebar-for-mobile {
         display: none;
     }
  }
@@ -230,3 +242,118 @@ ul {
 
 
 
+#sidebar-wrapper {
+    z-index: 1000;
+    position: fixed;
+    left: 250px;
+    width: 0;
+    height: 100%;
+    margin-left: -250px;
+    overflow-y: auto;
+    background: #000;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+  }
+  #wrapper.toggled #sidebar-wrapper {
+    width: 250px;
+  }
+  #sidebar-wrapper {
+    width: 250px;
+  }
+  #wrapper.toggled #sidebar-wrapper {
+    width: 0;
+  }
+  .sidebar-nav {
+    position: absolute;
+    top: 0;
+    width: 250px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  .sidebar-nav li {
+    text-indent: 20px;
+    line-height: 40px;
+  }
+  .sidebar-nav li a {
+    display: block;
+    text-decoration: none;
+    color: #999999;
+  }
+  .sidebar-nav li a:hover {
+    text-decoration: none;
+    color: #fff;
+    background: rgba(255, 255, 255, 0.2);
+  }
+  .sidebar-nav li a:active,
+  .sidebar-nav li a:focus {
+    text-decoration: none;
+  }
+  .sidebar-nav > .sidebar-brand {
+    height: 65px;
+    font-size: 18px;
+    line-height: 60px;
+  }
+  .sidebar-nav > .sidebar-brand a {
+    color: #999999;
+  }
+  .sidebar-nav > .sidebar-brand a:hover {
+    color: #fff;
+    background: none;
+  }
+  .sidebar-nav > .sidebar-brand {
+    height: 65px;
+    font-size: 18px;
+    line-height: 60px;
+  }
+  .sidebar-nav > .sidebar-brand a {
+    color: #999999;
+  }
+  .sidebar-nav > .sidebar-brand a:hover {
+    color: #fff;
+    background: none;
+  }
+  #wrapper {
+    padding-left: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+  }
+  #wrapper.toggled {
+    padding-left: 250px;
+  }
+
+  #page-content-wrapper {
+    width: 100%;
+    position: absolute;
+    padding: 15px;
+  }
+  #wrapper.toggled #page-content-wrapper {
+    position: absolute;
+    margin-right: -250px;
+  }
+  @media(min-width:768px) {
+    #wrapper {
+      padding-left: 250px;
+    }
+    #wrapper.toggled {
+      padding-left: 0;
+    }
+    #sidebar-wrapper {
+      width: 250px;
+    }
+    #wrapper.toggled #sidebar-wrapper {
+      width: 0;
+    }
+    #page-content-wrapper {
+      padding: 20px;
+      position: relative;
+    }
+    #wrapper.toggled #page-content-wrapper {
+      position: relative;
+      margin-right: 0;
+    }
+  }
