--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,7 @@ body {
 .bg_form {
     background-color: #FFFFFF;
 }
+/* modify th, td for bootstrap 5 table */
 .table_th th {
     border-bottom: 0px !important;
     border-top: none !important
@@ -23,22 +24,8 @@ body {
 .table_th td {
     border-top: none !important
 }
+/* end th, td for bootstrap 5 table */
 
-.sidebar{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    background-color: white;
-    z-index: 999;
-}
-#mySidebar {
-    display:none; 
-    width: 30%;
-    position: fixed;
-    top: 0;
-    left: 0;
-}
 .has-search .form-control {
     padding-left: 2.375rem;
 }
@@ -54,17 +41,19 @@ body {
     pointer-events: none;
     color: #aaa;
 }
-
+/* modify input for bootstrap input field */
 input {
     border: none;
     border-bottom: 1px solid #666666;
 }
+
 input:focus,
 select:focus,
 textarea:focus,
 button:focus {
     outline: none;
 }
+/* end modify input for bootstrap input field */
 .thead-light th {
     background-color: #E6E7F0 !important;
     font-weight: normal;
@@ -79,9 +68,11 @@ button:focus {
 .form-fields li{
     padding: 10px;
   }
+/* hide table border bottom for bootstrap table */
   .table>:not(:last-child)>:last-child>* {
     border-bottom-color:#fff;
   }
+  /* end hide table border bottom for bootstrap table */
 .btn-light {
     background-color: #EAEBF4 !important;
 }
@@ -127,9 +118,17 @@ button:focus {
 .comments {
     font-size: 20px;
 }
+/* hide ul list for bootstrap ul */
 ul {
     list-style: none;
   }
+/* end hide ul list for bootstrap ul */
+
+/* hide border bottom for bootstrap table */
+  .table>:not(caption)>*>* {
+    border-bottom-width:0px
+  }
+/* end hide border bottom for bootstrap table */
 
 .for_list ul li::before {
     color: #C4C4C4;
@@ -147,9 +146,107 @@ ul {
 .form-fields li{
     text-align: right;
 }
-/* .result td, .result th {
-    border-top: 0px !important;
-} */
+
+.sidebar_toggle {
+    position: fixed !important;
+    top: 0;
+    left: 0;
+}
+/* for sidebar */
+#sidebar-wrapper {
+  z-index: 1000;
+  position: fixed;
+  left: 250px;
+  width: 0;
+  height: 100%;
+  margin-left: -250px;
+  overflow-y: auto;
+  background: #F5F5F5;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+#wrapper.toggled #sidebar-wrapper {
+  width: 250px;
+}
+#sidebar-wrapper {
+  width: 250px;
+}
+#wrapper.toggled #sidebar-wrapper {
+  width: 0;
+}
+.sidebar-nav {
+  position: absolute;
+  top: 0;
+  width: 250px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.sidebar-nav li {
+  text-indent: 20px;
+  line-height: 40px;
+}
+.sidebar-nav li a {
+  display: block;
+  text-decoration: none;
+  color: #3B3D4D;
+}
+.sidebar-nav li a:hover {
+  text-decoration: none;
+  color: #fff;
+  background: rgba(255, 255, 255, 0.2);
+}
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+  text-decoration: none;
+}
+.sidebar-nav > .sidebar-brand {
+  height: 65px;
+  font-size: 18px;
+  line-height: 60px;
+}
+.sidebar-nav > .sidebar-brand a {
+  color: #999999;
+}
+.sidebar-nav > .sidebar-brand a:hover {
+  color: #fff;
+  background: none;
+}
+.sidebar-nav > .sidebar-brand {
+  height: 65px;
+  font-size: 18px;
+  line-height: 60px;
+}
+.sidebar-nav > .sidebar-brand a {
+  color: #999999;
+}
+.sidebar-nav > .sidebar-brand a:hover {
+  color: #fff;
+  background: none;
+}
+#wrapper {
+  padding-left: 0;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+#wrapper.toggled {
+  padding-left: 250px;
+}
+
+#page-content-wrapper {
+  width: 100%;
+  position: absolute;
+  padding: 15px;
+}
+#wrapper.toggled #page-content-wrapper {
+  position: absolute;
+  margin-right: -250px;
+}
+/* end sidebar */
 
 /* media queries */
 
@@ -162,9 +259,11 @@ ul {
     .form-fields-container {
         width: 50% !important;
     }
+    /* modify p-4 for bootstrap padding */
     .p-4 {
         padding: 0.7rem !important;
-    }   
+    }  
+    /* end modify p-4 for bootstrap padding */ 
  }
  @media (max-width: 767.98px) { 
     .for_hide {
@@ -175,6 +274,7 @@ ul {
     }
     .col_edit {
         padding-left: 15px !important;
+        margin-bottom: 10px;
     }
     .col_modify {
         padding-right: 15px !important;
@@ -185,9 +285,12 @@ ul {
     .search-hide {
         display: none;
     }
+    /* modify p-5 for bootstrap padding */
     .pt-5 {
         padding-top: 0px !important;
     }
+    /* end modify p-5 for bootstrap padding */
+
 }
 
  @media (min-width: 768px) { 
@@ -197,145 +300,6 @@ ul {
     .sidebar-for-mobile {
         display: none;
     }
- }
-
- @media (min-width: 768px) and (max-width: 991.98px) { 
-    .col-md-10 {
-        flex: 0 0 100%;
-        max-width: 100%;
-    }
- }
-
-@media (max-width: 960px) { 
-    .form-fields-container{
-        width: 100% !important;
-    }
-
-    .form-fields{
-        padding: 0 !important;
-        margin: 0 !important;
-        text-align: right;
-    }
-    .px-3 {
-        padding-left: .1rem !important;
-    }
-    .px-5 {
-        padding-left: .5rem !important;
-        padding-right: .5rem !important;
-    }
-    .p-3 {
-        padding: .5rem !important;
-    }
-    .pb-5 {
-        padding-bottom: .7rem !important;
-    }
-}
-
-@media (max-width: 991.98px) {
-    .for_sidebar {
-        display: none;
-    }
-    .for_consultant{
-        float: none !important;
-    }
-}
-
-
-
-#sidebar-wrapper {
-    z-index: 1000;
-    position: fixed;
-    left: 250px;
-    width: 0;
-    height: 100%;
-    margin-left: -250px;
-    overflow-y: auto;
-    background: #000;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-  }
-  #wrapper.toggled #sidebar-wrapper {
-    width: 250px;
-  }
-  #sidebar-wrapper {
-    width: 250px;
-  }
-  #wrapper.toggled #sidebar-wrapper {
-    width: 0;
-  }
-  .sidebar-nav {
-    position: absolute;
-    top: 0;
-    width: 250px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-  .sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
-  }
-  .sidebar-nav li a {
-    display: block;
-    text-decoration: none;
-    color: #999999;
-  }
-  .sidebar-nav li a:hover {
-    text-decoration: none;
-    color: #fff;
-    background: rgba(255, 255, 255, 0.2);
-  }
-  .sidebar-nav li a:active,
-  .sidebar-nav li a:focus {
-    text-decoration: none;
-  }
-  .sidebar-nav > .sidebar-brand {
-    height: 65px;
-    font-size: 18px;
-    line-height: 60px;
-  }
-  .sidebar-nav > .sidebar-brand a {
-    color: #999999;
-  }
-  .sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
-  }
-  .sidebar-nav > .sidebar-brand {
-    height: 65px;
-    font-size: 18px;
-    line-height: 60px;
-  }
-  .sidebar-nav > .sidebar-brand a {
-    color: #999999;
-  }
-  .sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
-  }
-  #wrapper {
-    padding-left: 0;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-  }
-  #wrapper.toggled {
-    padding-left: 250px;
-  }
-
-  #page-content-wrapper {
-    width: 100%;
-    position: absolute;
-    padding: 15px;
-  }
-  #wrapper.toggled #page-content-wrapper {
-    position: absolute;
-    margin-right: -250px;
-  }
-  @media(min-width:768px) {
     #wrapper {
       padding-left: 250px;
     }
@@ -356,4 +320,52 @@ ul {
       position: relative;
       margin-right: 0;
     }
-  }
+ }
+
+ @media (min-width: 768px) and (max-width: 991.98px) { 
+     /* modify col-md-10 for bootstrap grid */
+    .col-md-10 {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    /* end modify col-md-10 for bootstrap grid */
+ }
+
+@media (max-width: 960px) { 
+    .form-fields-container{
+        width: 100% !important;
+    }
+
+    .form-fields{
+        padding: 0 !important;
+        margin: 0 !important;
+        text-align: right;
+    }
+    /* modify padding left and right for bootstrap padding */
+    .px-3 {
+        padding-left: .1rem !important;
+    }
+    .px-5 {
+        padding-left: .5rem !important;
+        padding-right: .5rem !important;
+    }
+    /* end modify padding left and right for bootstrap padding */
+
+    /* modify padding for bootstrap padding */
+    .p-3 {
+        padding: .5rem !important;
+    }
+    /* end modify padding for bootstrap padding */
+    .pb-5 {
+        padding-bottom: .7rem !important;
+    }
+}
+
+@media (max-width: 991.98px) {
+    .for_sidebar {
+        display: none;
+    }
+    .for_consultant{
+        float: none !important;
+    }
+}
